# bic-index

./: LICENSE  README.md  requirements.txt  setup.cfg
bic_index/: __init__.py  _anne.py  _ayadi.py  _bozdag.py  _csi.py  _dice.py  _ebc.py  _eren.py  _error.py  _fabia.py  _jaccard.py  _lew.py  _misc.py  _prelic.py  _stmaria.py  _w.py
bic_index/test/: test_indices.py
